# modernblog

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Rocket.toml  index.html
.github/workflows/: main-check.yml
migrations/2022-04-30-134547_imagedb/: up.sql
migrations/2022-05-19-150739_postupdate/: down.sql  up.sql
migrations/2022-05-19-155857_notnull/: down.sql
src/: auth.rs  lib.rs  login.rs  main.rs  new.rs  posts.rs  route.rs  schema.rs  sql.rs  util.rs
style/: desktop.sass
