[workspace]
members = ["packages/common", "packages/backend", "packages/writer"]

[profile.dev]
codegen-units = 1
opt-level = "z"

[profile.release]
opt-level = "z"
panic = "abort"
codegen-units = 1
lto = true

[profile.backend]
inherits = "release"
opt-level = 3
panic = 'unwind'
codegen-units = 16
